# remote-desk

./: .gitignore  CMakeLists.txt  README.md  format-code.bat  installDeps.sh  test_discovery  test_discovery.cpp
examples/: CMakeLists.txt  discovery_example.cpp  screen_capture_yuv420_example.cpp  screen_capturer_example.cpp
scripts/: setup_ffmpeg_windows.ps1
src/capturer/screen/: iscreen_capture_engine.h  screen_capture_config.h  screen_capture_engine_factory.cpp  screen_capture_engine_factory.h  screen_capturer.cpp  screen_capturer.h
src/capturer/screen/desktop_duplication/: desktop_duplication_screen_capture_engine.cpp  desktop_duplication_screen_capture_engine.h
src/capturer/screen/x11/: x11_screen_capture_engine.cpp  x11_screen_capture_engine.h
src/core/: frame.h  main.cpp  media_processor.h  media_sink.h  media_source.h  pipeline.h  pipeline_interfaces.cpp  pipeline_interfaces.h  service_manager.cpp  service_manager.h  service_message.h
src/discovery/: CMakeLists.txt  discovery.cpp  discovery.h  discovery_service.cpp  discovery_service.h
src/log/: remote_desk_log.h
src/processors/: pixel_format_converter.cpp  pixel_format_converter.h  video_encoder.h  video_scaler.cpp  video_scaler.h
src/service/: main.cpp
src/services/message/: message_service.cpp  message_service.h
src/services/rtsp/: rtsp_desktop_service.h
